# plottery

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  config.yaml  pyproject.toml
.github/workflows/: pre-commit.yml
plottery/: __init__.py  plottery.py
