[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Plottery"
version = "0.0.1"
dependencies = [
    "pandas",
    "awkward",
    "mplhep",
    "matplotlib",
    "boost_histogram",
    "uproot",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pylint", "black"]

[project.scripts]
Plottery = "Plottery:main"
